
- JSON:
  . Fixed bug #72069 (Behavior \JsonSerializable different from json_encode).
    (Laruence)

- OCI8:
  . Fixed bug #71600 (oci_fetch_all segfaults when selecting more than eight
    columns). (Tian Yang)

- Opcache:
  . Fixed bug #72014 (Including a file with anonymous classes multiple times
    leads to fatal error). (Laruence)

- Postgres:
  . Fixed bug #72028 (pg_query_params(): NULL converts to empty string).
    (Laruence)
  . Fixed bug #71062 (pg_convert() doesn't accept ISO 8601 for datatype
    timestamp). (denver at timothy dot io)

- Session:
  . Fixed bug #71972 (Cyclic references causing session_start(): Failed to
    decode session object). (Laruence)

- SPL:
  . Fixed bug #72051 (The reference in CallbackFilterIterator doesn't work as
    expected). (Laruence)

- SQLite3:
  . Fixed bug #68849 (bindValue is not using the right data type). (Anatol)

- Standard:
  . Fixed bug #72075 (Referencing socket resources breaks stream_select).
    (Laruence)
  . Fixed bug #72031 (array_column() against an array of objects discards all
    values matching null). (Nikita)

28 Apr 2016 PHP 7.0.6

- Core:
  . Fixed bug #71930 (_zval_dtor_func: Assertion `(arr)->gc.refcount <= 1'
    failed). (Laruence)
  . Fixed bug #71922 (Crash on assert(new class{})). (Nikita)
  . Fixed bug #71914 (Reference is lost in "switch"). (Laruence)
  . Fixed bug #71871 (Interfaces allow final and abstract functions). (Nikita)
  . Fixed Bug #71859 (zend_objects_store_call_destructors operates on realloced
    memory, crashing). (Laruence)
  . Fixed bug #71841 (EG(error_zval) is not handled well). (Laruence)
  . Fixed bug #71750 (Multiple Heap Overflows in php_raw_url_encode/
    php_url_encode). (Stas)
  . Fixed bug #71731 (Null coalescing operator and ArrayAccess). (Nikita)
  . Fixed bug #71609 (Segmentation fault on ZTS with gethostbyname). (krakjoe)
  . Fixed bug #71428 (inheritance and allow_null). (krakjoe)
  . Fixed bug #71414 (Inheritance, traits and interfaces). (krakjoe)